hphp/test/slow/object_property/707.php.expectf

Warning: Attempt to increment/decrement property of non-object in %s/test/slow/object_property/707.php on line 4
NULL

Warning: Attempt to increment/decrement property of non-object in %s/test/slow/object_property/707.php on line 4
NULL

Warning: Creating default object from empty value in %s/test/slow/object_property/707.php on line 4

Fatal error: Cannot access empty property in %s/test/slow/object_property/707.php on line 4
